<resources>
    <string name="app_name">Shopping List</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="logIN">LogIn</string>
    <string name="register">Register</string>
    <string name="registerInfoText">Please complete :) </string>
    <string name="emial">Email</string>
    <string name="phone">Phone</string>
    <string name="newList">What you want to do?</string>
    <string name="joinList">Join list</string>
    <string name="createList">Create new list</string>
    <string name="listName">List name</string>
    <string name="apply">Apply</string>
    <string name="passCode">Pass code from other member</string>
    <string name="join">Join</string>
    <string name="addListBtn">Join or Create new List</string>
    <string name="addProductBtn">Add Product</string>
    <string name="addPaymentBtn">Add Payment</string>
    <string name="listCode">Code</string>
    <string name="productName">Product Name</string>
    <string name="productBy">By</string>
    <string name="productShop">Suggested purchase place</string>
    <string name="productNum">Num</string>
    <string name="productCost">Product predicted cost</string>
    <string name="logout">logout</string>
    <string name="payment">payment</string>
    <string name="receipt">receipt</string>
    <string name="paymentTo">Payment To</string>
    <string name="paymentBy">Payment By</string>
    <string name="paymentAmount">Payment Amount</string>
    <string name="receiptUser">Receipt By</string>
    <string name="receiptAmount">Receipt Amount</string>
    <string name="balanceUser">Owner</string>
    <string name="balanceAmount">Amount</string>
</resources>