<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">


    <EditText
        android:id="@+id/loginTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/login"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <EditText
        android:id="@+id/passwordTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/loginTxt"
        app:layout_constraintStart_toStartOf="@+id/loginTxt"
        app:layout_constraintTop_toBottomOf="@+id/loginTxt" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/logIN"
        app:layout_constraintEnd_toEndOf="@+id/passwordTxt"
        app:layout_constraintStart_toStartOf="@+id/passwordTxt"
        app:layout_constraintTop_toBottomOf="@+id/passwordTxt"
        android:onClick="loginClick"/>

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@+id/loginBtn"
        app:layout_constraintStart_toStartOf="@+id/loginBtn"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
        android:layout_marginTop="30dp"
        android:onClick="registerClick"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="150dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="150dp" />



</androidx.constraintlayout.widget.ConstraintLayout>