<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".list.choose.NewListActivity">

    <TextView
        android:id="@+id/newListTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/newListBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createList"
        app:layout_constraintEnd_toEndOf="@+id/newListTxt"
        app:layout_constraintStart_toStartOf="@+id/newListTxt"
        app:layout_constraintTop_toBottomOf="@+id/newListTxt"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:onClick="createNewListClick"/>

    <Button
        android:id="@+id/joinListBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/joinList"
        app:layout_constraintEnd_toEndOf="@+id/newListBtn"
        app:layout_constraintStart_toStartOf="@+id/newListBtn"
        app:layout_constraintTop_toBottomOf="@+id/newListBtn"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:onClick="joinListClick"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="200dp" />


</androidx.constraintlayout.widget.ConstraintLayout>