<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".list.choose.CreateListActivity">

    <TextView
        android:id="@+id/createListTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        android:layout_marginTop="30dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="200dp" />

    <EditText
        android:id="@+id/listNameEditableTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:hint="@string/listName"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/createListTxt"
        app:layout_constraintStart_toStartOf="@+id/createListTxt"
        app:layout_constraintTop_toBottomOf="@+id/createListTxt" />

    <Button
        android:id="@+id/applyListBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        app:layout_constraintEnd_toEndOf="@+id/listNameEditableTxt"
        app:layout_constraintStart_toStartOf="@+id/listNameEditableTxt"
        app:layout_constraintTop_toBottomOf="@+id/listNameEditableTxt"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="50dp"
        android:onClick="applyNewListClick"/>

</androidx.constraintlayout.widget.ConstraintLayout>